# renci-ner

./: README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
src/renci_ner/: Annotation.py  AnnotationText.py  Service.py  __init__.py  annotations.py  cli.py  core.py  services.py
src/renci_ner/services/: biomegatron.py  core.py  nameres.py  sapbert.py
src/renci_ner/services/linkers/: babelsapbert.py  nameres.py  sapbert.py
src/renci_ner/services/ner/: biomegatron.py
src/renci_ner/services/normalization/: nodenorm.py
tests/biomegatron/: test_biomegatron.py
tests/core/: test_core.py
tests/multiple_annotators/: test_multiple_annotators.py
tests/nameres/: test_basic.py  test_nameres.py
tests/nodenorm/: test_nodenorm.py
tests/sapbert/: test_sapbert.py
