[project]
name = "renci-ner"
version = "0.1.0"
description = "A library for accessing RENCI NER services."
readme = "README.md"
authors = [
    { name = "Gaurav Vaidya", email = "gaurav@renci.org" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
